--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -1,11 +1,13 @@
 {
-    "yo": "yo",
-    "intro_main": "i'm Julia, (she/her), a 19yo \"software developer\" from",
-    "brazil": "brazil",
-    "reach_on_discord": "u can reach me on discord @Juliapixel if u want to",
-    "check_out_my": "also check out my",
-    "woah": "woah",
-    "or_by": "or by",
-    "that_sorta_stuff": "if ur into that sorta stuff",
-    "adding_more_stuff": "also i'm adding more stuff on here eventually ok"
+    "home": {
+        "yo": "yo",
+        "intro_main": "i'm Julia, (she/her), a 19yo \"software developer\" from",
+        "brazil": "brazil",
+        "reach_on_discord": "u can reach me on discord @Juliapixel if u want to",
+        "check_out_my": "also check out my",
+        "woah": "woah",
+        "or_by": "or by",
+        "that_sorta_stuff": "if ur into that sorta stuff",
+        "adding_more_stuff": "also i'm adding more stuff on here eventually ok"
+    }
 }
