add my current time and timezone to the homepage

--- a/src/lib/i18n/pt.json
+++ b/src/lib/i18n/pt.json
@@ -8,6 +8,7 @@
         "woah": "uau",
         "or_by": "ou por",
         "that_sorta_stuff": "se vc gostar desse tipo de coisa",
+        "my_current_time_is": "a hora onde eu estou é",
         "adding_more_stuff": "eu vou colocar mais coisas aqui no futuro ok"
     }
 }
