--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -8,6 +8,7 @@
         "woah": "woah",
         "or_by": "or by",
         "that_sorta_stuff": "if ur into that sorta stuff",
+        "my_current_time_is": "my current time is",
         "adding_more_stuff": "also i'm adding more stuff on here eventually ok"
     }
 }
