--- a/src/lib/i18n/pt.json
+++ b/src/lib/i18n/pt.json
@@ -1,14 +1,37 @@
 {
-    "home": {
-        "yo": "eai",
-        "intro_main": "meu nome é Júlia (ela/dela), \"desenvolvedora\" de \"software\"",
-        "brazil": "brasileira",
-        "reach_on_discord": "vc pode me chamar no discord (@Juliapixel) se quiser",
-        "check_out_my": "tb da uma olhada no meu",
-        "woah": "uau",
-        "or_by": "ou por",
-        "that_sorta_stuff": "se vc gostar desse tipo de coisa",
-        "my_current_time_is": "a hora onde eu estou é",
-        "adding_more_stuff": "eu vou colocar mais coisas aqui no futuro ok"
+  "home": {
+    "yo": "eai",
+    "intro_main": "meu nome é Júlia (ela/dela), \"desenvolvedora\" de \"software\"",
+    "brazil": "brasileira",
+    "reach_on_discord": "vc pode me chamar no discord (@Juliapixel) se quiser",
+    "check_out_my": "tb da uma olhada no meu",
+    "woah": "uau",
+    "or_by": "ou por",
+    "that_sorta_stuff": "se vc gostar desse tipo de coisa",
+    "my_current_time_is": "meu horário atual é",
+    "adding_more_stuff": "eu vou colocar mais coisas aqui no futuro ok",
+    "about_1": {
+      "0": "eu programo desde que eu tenho, sla, 14 anos, programando turtles de ",
+      "1": "no minecraft"
+    },
+    "about_2": {
+      "0": "atualmente eu programo principalmente em Rust, trabalhando em projetos pessoais, que podem ser vistos no meu Github"
+    },
+    "likes": {
+      "0": "eu também gosto de",
+      "1": "impressão 3D",
+      "2": "modelagem CAD"
+    },
+    "contact": {
+      "0": "se vc gosta de alguma dessas coisas e quer conversar sobre, vc pode me encontrar",
+      "1": "aqui"
     }
+  },
+  "header": {
+    "contact": "contato"
+  },
+  "footer": {
+    "love": "</> com <3 pela Júlia",
+    "gay": "be gay "
+  }
 }
