--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -23,7 +23,7 @@
       "2": "CAD modeling"
     },
     "contact": {
-      "0": "if you like any of that stuff and wanna talk about it you canr reach me",
+      "0": "if you like any of that stuff and wanna talk about it you can reach me",
       "1": "here"
     }
   },
