--- a/src/lib/i18n/pt.json
+++ b/src/lib/i18n/pt.json
@@ -28,10 +28,31 @@
     }
   },
   "header": {
-    "contact": "contato"
+    "contact": "contato",
+    "stuff_ive_made": "coisas q eu fiz"
   },
   "footer": {
     "love": "</> com <3 pela Júlia",
     "gay": "be gay "
+  },
+  "sim": {
+    "mit": {
+      "0": "uma crate rust, que pode ser tanto um binário executável quanto uma lib, que transforma imagens em arte ascii, tipo"
+    },
+    "tpr": {
+      "0": "um driver userspace e ferramenta de linha de comando pra impressoras térmicas que usam o protocolo ESC-POS, infelizmente ela só funciona no windows.",
+      "1": "ela suporta várias funções do protocolo, como",
+      "2": "preciso achar uma foto de como fica, pq é bem legal...",
+      "list": {
+        "0": "impressão de imagem, com dithering (pra ficar bonitinho)",
+        "1": "QR codes",
+        "2": "estilos de fonte"
+      }
+    },
+    "tw": {
+      "0": "feito com Svelte, talvez algum dia eu coloque um blog ou alguma coisa com um backend em rust",
+      "1": "ele está rodando, junto com algumas outras coisas minhas, em uma instância grátis x64 da oracle cloud",
+      "title": "esse site"
+    }
   }
 }
