change up some stuff ig

--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -8,7 +8,7 @@
       "1": "turtles on minecraft"
     },
     "about_2": {
-      "0": "noawadays i mostly write Rust, making personal projects that can be seen on my Github"
+      "0": "noawadays i mostly write Rust, either making my own things or contributing to open-source projects"
     },
     "reach_on_discord": "u can reach me on discord @Juliapixel if u want to",
     "check_out_my": "also check out my",
