--- a/src/lib/i18n/pt.json
+++ b/src/lib/i18n/pt.json
@@ -15,7 +15,7 @@
       "1": "no minecraft"
     },
     "about_2": {
-      "0": "atualmente eu programo principalmente em Rust, trabalhando em projetos pessoais, que podem ser vistos no meu Github"
+      "0": "atualmente eu programo principalmente em Rust, seja contribuindo pra projetos open-source ou fazendo minhas próprias coisas"
     },
     "likes": {
       "0": "eu também gosto de",
