--- a/src/lib/i18n/pt.json
+++ b/src/lib/i18n/pt.json
@@ -11,7 +11,7 @@
     "my_current_time_is": "meu horário atual é",
     "adding_more_stuff": "eu vou colocar mais coisas aqui no futuro ok",
     "about_1": {
-      "0": "eu programo desde que eu tenho, sla, 14 anos, programando turtles de ",
+      "0": "eu programo desde quando eu tinha, sla, 14 anos, programando turtles de ",
       "1": "no minecraft"
     },
     "about_2": {
